# docminer

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  pyproject.toml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/extraction/: __init__.py  extractor.py  llm.py  schema.py
backend/app/models/: __init__.py  document.py  extraction.py
backend/app/routes/: documents.py  extract.py  schemas.py
backend/app/services/: __init__.py  extraction_service.py
backend/src/docminer_api/: database.py
backend/src/docminer_api/extraction/: __init__.py  extractor.py  llm.py  result.py  schema.py
backend/src/docminer_api/models/: __init__.py  schema.py
backend/src/docminer_api/routes/: documents.py  extract.py  schemas.py
backend/src/docminer_api/services/: __init__.py  extraction_service.py
backend/tests/test_api/: conftest.py  test_documents.py  test_extract.py
backend/tests/test_extraction/: test_exceptions.py  test_extractor.py  test_llm.py  test_result.py  test_schema.py
docs/: ROADMAP.md
docs/plans/: 2026-03-13-docminer-design.md  2026-03-13-docminer-implementation.md  2026-03-16-ui-foundation-design.md  2026-03-19-frontend-visual-design.md
docs/research/: 2026-03-17-extraction-landscape.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: layout.tsx  page.tsx  template.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/: empty-state.tsx  page-header.tsx  section-divider.tsx  sidebar.tsx  status-badge.tsx
frontend/src/lib/: motion.ts
(+17 files in other folders)
