[project]
name = "docminer"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8", "docminer-api"]

[tool.uv.sources]
docminer-api = { workspace = true }

[tool.uv.workspace]
members = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = ["--import-mode=importlib"]
